<resources>
    <string name="app_name">Shopping APP</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="signin">Войти</string>
    <string name="signup">Зарегистрироваться</string>
    <string name="registration_name">Имя</string>
    <string name="registration_surname">Фамилия</string>
    <string name="registration_phone">Номер телефона</string>
    <string name="registration_enter">Войти</string>
    <string name="password">Пароль</string>
    <string name="email">Почта</string>
    <string name="registration">Регистрация</string>
    <string name="forgot_password">Забыл пароль</string>
    <string name="reset_password">Сбросить пароль</string>
    <string name="cancel">Отмена</string>
    <string name="send">Отправить</string>
    <string name="reset_description">Мы отправили вам на почту письмо для смены пароля</string>
    <string name="description">Описание</string>
    <string name="parametrs">Характеристики</string>
    <string name="more_info">Подробнее</string>
    <string name="add_to_basket">Добавить корзину</string>
    <string name="available_to_order">Доступно для заказа %1$s штук</string>
    <string name="price">%1$s ₽</string>
    <string name="old_price">%1$s ₽</string>
    <string name="discount">-%1$s%%</string>
    <string name="favourite">Избранное</string>
    <string name="number_goods">%1$s товар</string>
    <string name="shop">Магазин</string>
    <string name="callback_message">Обратная связь</string>
    <string name="return_product">Возврат товара</string>
    <string name="exit">Выйти</string>
    <string name="profile">Личный кабинет</string>
    <string name="basket">Корзина</string>
    <string name="amount_sum">Общая сумма</string>
    <string name="your_shopping_basket_is_empty">В вашей карзине пока нету товаров</string>
    <string name="amount_price">%1$s ₽</string>
    <string name="delivery_order">Оформить заказ</string>
    <string name="freedback_count">(%1$s)</string>
    <string name="rating_number">%1$s</string>
    <string name="beast_deal">Лучшие предложения</string>
    <string name="all_goods">Все товары</string>
    <string name="for_you">Для вас</string>
    <string name="rate">Оценить</string>
    <string name="in_basket">В корзину</string>
</resources>