<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/tlShopItem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/colorPrimary"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            app:title="Home">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">
                <ImageButton
                    android:id="@+id/imageClose"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:background="@color/white"
                    android:src="@drawable/baseline_arrow_back_24"
                    app:tint="@color/black"/>

                <Space
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"/>

                <ImageButton
                    android:id="@+id/btnShare"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:background="@color/white"
                    android:layout_marginEnd="10dp"
                    android:src="@drawable/share"
                    app:tint="@color/black"/>
            </LinearLayout>

        </androidx.appcompat.widget.Toolbar>

        <androidx.cardview.widget.CardView
            android:id="@+id/cardProductImages"
            android:layout_width="match_parent"
            android:layout_height="350dp"
            android:layout_marginHorizontal="16dp"
            app:cardCornerRadius="15dp"
            app:cardElevation="0dp">

            <ImageView
                android:id="@+id/btnFavourite"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:background="@color/white"
                android:src="@drawable/heart"
                android:elevation="1dp"/>

            <androidx.viewpager2.widget.ViewPager2
                android:id="@+id/viewPagerProductImages"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>

        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_light"
            android:text="A`PIEU"
            android:textSize="19sp"
            android:layout_marginTop="10dp"
            android:textStyle="bold"
            android:textColor="@color/light_grey"
            android:layout_marginHorizontal="16dp" />

        <TextView
            android:id="@+id/tvSubtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_light"
            android:layout_marginHorizontal="16dp"
            android:text="Пенка для умывания`A`PIEU` `DEEP CLEAN` 200 мл"
            android:textSize="22sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvAvailable"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/available_to_order"
            android:layout_marginHorizontal="16dp"
            android:textColor="@color/light_grey"
            android:textSize="15sp" />

        <LinearLayout
            android:id="@+id/linearTitlePrice"
            android:layout_width="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvProductPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_light"
                android:text="@string/price"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvOldProductPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:text="@string/old_price"
                android:textColor="@color/light_grey"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/tvProductDiscount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:text="@string/discount"
                android:paddingVertical="2dp"
                android:paddingHorizontal="10dp"
                android:background="@drawable/rounded_corner"
                android:textColor="@color/white"
                android:textSize="15sp" />

        </LinearLayout>

            <View
                android:id="@+id/topLine"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/light_grey"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="10dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="6dp"
            android:textSize="18sp"
            android:textStyle="bold"
            android:text="@string/description"/>

        <TextView
            android:id="@+id/tvProductDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/dark_grey"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="6dp"
            android:textSize="16sp"
            android:text="Пенка для лица Глубокое очищение содержит минеральную воду и соду, способствует глубокому очищению пор от различных загрязнений, контролирует работу сальных желез, сужает поры. Обладает мягким антисептическим действием, не пересушивая кожу. Минеральная вода тонизирует и смягчает кожу."/>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="30dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvProductInfo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:layout_marginBottom="10dp"
                android:text="@string/parametrs" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvInfo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:layout_marginHorizontal="16sp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:layout_marginTop="10dp"
            android:text="Состав" />

        <TextView
            android:id="@+id/tvIngredients"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/dark_grey"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="6dp"
            android:textSize="16sp"
            android:maxLines="2"
            android:text="Water, Glycerin Palmitic Acid, Stearic Acid, Myristic Acid, Potassium Hydroxide, Lauric Acid, Cocamidopropyl Betaine, Tea-Lauryl Sulfate, Phenoxyethanol, Sodium Chloride, Acrylates/C10-30 Alkyl Acrylate Crosspolymer, Arachidic Acid, Fragrance, Cellulose Gum, Disodium Edta, Capric Acid, Sodium Benzoate"/>

        <TextView
            android:id="@+id/tvMoreInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/more_info"
            android:layout_marginHorizontal="16dp"
            android:textColor="@color/light_grey"
            android:textSize="15sp" />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_marginHorizontal="16dp"
            android:layout_marginVertical="16dp"
            android:layout_height="wrap_content">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/buttonAddToCart"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/add_to_basket"
                app:spinning_bar_color="@color/white"
                style="@style/pinkButtonStyle"/>

            <ProgressBar
                android:id="@+id/prbAddShopItem"
                style="?android:attr/progressBarStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:indeterminateTint="@color/light_pink"/>
        </androidx.cardview.widget.CardView>



    </LinearLayout>

</androidx.core.widget.NestedScrollView>